# nodemesh

./: CLAUDE.md  Cargo.toml  _prompt-fix-send-channel.md
_doc/: 2026-03-03-phase5-webrtc-sfu-design.md  2026-03-04-phase5b-multi-party-sfu-plan.md  2026-03-04-websocket-bridge-design.md
config/: meshd.dev.toml  meshd.example.toml  meshd.sfu-test.toml
crates/amp/: Cargo.toml
crates/amp/src/: address.rs  lib.rs  message.rs  validate.rs
crates/docparse/: Cargo.toml
crates/docparse/src/: main.rs
crates/docparse/src/extractors/: docx.rs  email.rs  mod.rs  pdf.rs  plaintext.rs
crates/meshd/: Cargo.toml
crates/meshd/src/: config.rs  main.rs  metrics.rs  server.rs
crates/meshd/src/bridge/: callback.rs  mod.rs  server.rs  ws.rs
crates/meshd/src/peer/: connection.rs  manager.rs  mod.rs  resolver.rs
crates/meshd/tests/: sfu_signaling.rs  smoke.rs  ws_bridge.rs
crates/sfu/: Cargo.toml
crates/sfu/src/: lib.rs  media.rs  relay.rs  room.rs  session.rs
systemd/: meshd.service
tools/sfu-test/: Cargo.toml  index.html
tools/sfu-test/src/: main.rs
