[package]
name = "meshd"
version = "0.1.0"
edition = "2021"
description = "NodeMesh daemon — WebSocket mesh + local bridge for Laravel"

[[bin]]
name = "meshd"
path = "src/main.rs"

[dependencies]
amp = { path = "../amp" }
sfu = { path = "../sfu" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
hyper = { version = "1", features = ["client"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
tower = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.8"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
str0m = { workspace = true }
