[package]
name = "sfu"
version = "0.1.0"
edition = "2021"
description = "WebRTC SFU — selective forwarding unit using str0m"

[dependencies]
amp = { path = "../amp" }
str0m = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
